--- a/hof/kurogan-statblock.html
+++ b/hof/kurogan-statblock.html
@@ -4,7 +4,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:700" rel="stylesheet" type="text/css"/>
 		<link href="http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic" rel="stylesheet" type="text/css"/>
 		<meta charset="utf-8"/>
-		<title>Secundus, the Rogue Modron</title>
+		<title>Kurogan, the Great and Powerful</title>
 	</head>
 	<body>
 		<templates>
@@ -373,7 +373,7 @@
 			</script>
 		</templates>
 <!--	<stat-block id="ONE COLUMN"> -->
-		<stat-block data-content-height="625" data-two-column="" id="TWO COLUMNS">
+		<stat-block data-content-height="625" data-three-column="" id="THREE COLUMNS">
 			<creature-heading>
 				<h1>Kurogan, the Great and Powerful</h1>
 				<h2>Medium dragonborn (gold), neutral good</h2>
